--- a/_data/t.yml
+++ b/_data/t.yml
@@ -11,11 +11,11 @@ name:
 
 ## Site description
 description:
-  it: "Sito di esempio per il tema Jekyll"
+  it: "Comune, parrocchia, associazioni, web, questa è solo una parte della  mia vita!"
 
 ## Site author
 author:
-  it: "Team per la Trasformazione Digitale"
+  it: "18F"
 
 ## Social
 social-links:
