--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,12 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+  links:
+  - url: "https://www.esempio1.com"
+    text: "Link 1"
+  - url: "https://www.esempio2.com"
+    text: "Link 2"
+  - url: "https://www.enteappartenenza.com"
+    text: "Ente appartenenza/Owner"
+
